# rules-js

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/scripts/: npm-herder-release.py
.github/workflows/: npm-herder-release.yml
examples/bun-server/: BUCK  server.js  server.test.js
examples/deno-server/: BUCK  server.test.ts  server.ts
examples/frontend/: .gitignore  BUCK  README.md  package.json  pnpm-lock.yaml
examples/frontend/src/: app.test.js
npm-herder/: Cargo.toml  default_herder.toml
npm-herder/src/: buckify.rs  config.rs  graph.rs  init.rs  lockfile.rs  main.rs  npmrc.rs  vendor.rs
npm-herder/src/parsers/: bun.rs  deno.rs  mod.rs  pnpm.rs
rules/js/: BUCK  eslint.bzl  js_library.bzl  js_run.bzl  js_test.bzl  node_modules.bzl  providers.bzl  svelte_check.bzl  sveltekit.bzl  toolchain.bzl  typescript.bzl  vite.bzl  vitest.bzl
rules/js/scripts/: build_vite.cjs  build_vite.mjs  run_eslint.cjs  run_eslint.mjs  run_js_test.cjs  run_native_test.mjs  run_svelte_check.mjs  run_tsc.cjs  run_tsc.mjs  run_vite_dev.mjs  run_vitest.cjs  run_vitest.mjs
toolchains/: BUCK
