[package]
name = "npm-herder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
serde_starlark = "0.1.19"
toml = "0.9"
yaml_serde = "0.10.3"
petgraph = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
